# jdatamunch-mcp

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: results.md
src/jdatamunch_mcp/: __init__.py  config.py  embeddings.py  server.py  summarizer.py
src/jdatamunch_mcp/parser/: __init__.py  excel_parser.py
src/jdatamunch_mcp/profiler/: column_profiler.py
src/jdatamunch_mcp/storage/: embedding_store.py  sqlite_store.py
src/jdatamunch_mcp/tools/: embed_dataset.py  get_data_hotspots.py  get_schema_drift.py  index_local.py  list_repos.py  search_data.py  summarize_dataset.py
tests/: conftest.py  test_embed_dataset.py  test_excel_parser.py  test_get_data_hotspots.py  test_get_schema_drift.py  test_list_repos.py  test_meta_fields.py  test_summarizer.py
