[project]
name = "jdatamunch-mcp"
version = "0.4.0"
description = "Token-efficient MCP server for tabular data retrieval via CSV/Excel/Parquet/JSONL indexing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "J. Gravelle", email = "j@gravelle.us" },
]
dependencies = [
    "mcp>=1.10.0,<2.0.0",
    "charset-normalizer>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/jgravelle/jdatamunch-mcp"
Repository = "https://github.com/jgravelle/jdatamunch-mcp"
"Bug Tracker" = "https://github.com/jgravelle/jdatamunch-mcp/issues"

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0", "xlrd>=2.0.0"]
parquet = ["pyarrow>=14.0.0"]
anthropic = ["anthropic>=0.40.0"]
gemini = ["google-generativeai>=0.8.0"]
all = ["openpyxl>=3.1.0", "xlrd>=2.0.0", "pyarrow>=14.0.0", "anthropic>=0.40.0", "google-generativeai>=0.8.0"]

[project.scripts]
jdatamunch-mcp = "jdatamunch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jdatamunch_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
